@@ -47,6 +47,9 @@ New Features:
   * util-core: Add `c.t.util.ProxyTimer` which allows for creating proxy based
     `Timers` outside of the `com.twitter.util` package. ``RB_ID=846194``
 
+  * util-core: Add `AsyncStream.merge` merge potentially inifite streams 
+    ``RB_ID=846681``
+
   * util-security: Added new project. ``RB_ID=843070``
 
 API Changes:
